smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-invalid-namespace.smithy
// Parse error at line 6, column 6 near `$#`: Expected: '#', but found '$'
$version: "2.0"

namespace smithy.example

use a$#Bar
